--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   loading_animation_widget: ^1.2.0+4
   loader_overlay: ^2.2.0
+  url_launcher: ^6.1.11
 
 
 dev_dependencies:
