--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   loader_overlay: ^2.2.0
   url_launcher: ^6.1.11
-
+  flutter_image_compress: ^1.1.3
 
 dev_dependencies:
   flutter_test:
